fix bookmark of

--- a/_includes/bookmark.njk
+++ b/_includes/bookmark.njk
@@ -9,7 +9,7 @@
 {% block content %}
   <article class="bookmark content-section h-entry">
     <header>
-      <h1><a href="{{ url }}" class="u-in-reply-to">Bookmark: {{ title }}</a></h1>
+      <h1><a href="{{ url }}" class="u-bookmark-of">Bookmark: {{ title }}</a></h1>
       <aside aria-label="post meta data">
           <small>
             Bookmarked at:
