reverse rss feed order

--- a/content/_files/blog-rss.njk
+++ b/content/_files/blog-rss.njk
@@ -25,7 +25,7 @@
     <name>{{ metadata.author.name }}</name>
   </author>
   <icon>{{ site.gravatar }}</icon>
-  {%- for post in collections.blog %}
+  {%- for post in collections.blog | reverse %}
   {% set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
   <entry>
     <title>{{ post.data.title }}</title>
