Make webmention interactions a details/summary

--- a/_includes/components/webmentions/interaction.css
+++ b/_includes/components/webmentions/interaction.css
@@ -1,3 +1,7 @@
+.webmention__interaction {
+  margin-top: var(--line-height);
+}
+
 .webmention__items-list {
   position: relative;
   list-style: none;
