--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -58,7 +58,7 @@
 
       {% from './components/webmentions/interaction.njk' import interaction %}
       {% from './components/webmentions/text-responses.njk' import textResponses %}
-      {% set webmentionsForUrl = webmentions | getWebmentionsForUrl(site.url + page.url) %}
+      {% set webmentionsForUrl = webmentions | getWebmentionsForUrl(site.url + page.url) | removeSyndication(tweetUrl) %}
       {{ interaction(['like-of', 'repost-of'], 'Like', 'Likes and Reposts', webmentionsForUrl) }}
       {{ textResponses('in-reply-to', 'Reply', 'Replies', webmentionsForUrl) }}
       {{ textResponses('mention-of', 'Mention', 'Mentions', webmentionsForUrl) }}
