--- a/_includes/components/webmentions/interaction.css
+++ b/_includes/components/webmentions/interaction.css
@@ -27,6 +27,7 @@
 
 .webmention__item a:hover,
 .webmention__item a:focus {
+  isolation: isolate;
   z-index: 1;
   border-bottom: 0;
   outline: none;
