Add permalinks to bookmark overview

--- a/_includes/bookmarks-overview.njk
+++ b/_includes/bookmarks-overview.njk
@@ -5,6 +5,8 @@
     - components/bookmark-filter/bookmark-filter.css
     - components/tag/tag.css
     - components/tag-list/tag-list.css
+  showPermalink: true
+  showDate: true
 ---
 
 {% from "./components/tag/tag.njk" import tag %}
