--- a/_includes/components/footer/footer.njk
+++ b/_includes/components/footer/footer.njk
@@ -3,6 +3,7 @@
     <nav class="footer__other-nav" aria-labelledby="footer-other-pages-nav">
       <span id="footer-other-pages-nav" class="visuallyhidden">Other pages</span>
       <ul>
+        <li><a href="/accessibility-statement">Accessibility Statement</a></li>
         <li><a href="/bookmarks">Bookmarks</a></li>
       </ul>
     </nav>
