Move src files into src/

--- a/content/_files/manifest.njk
+++ b/content/_files/manifest.njk
@@ -11,5 +11,5 @@ eleventyExcludeFromCollections: true
   "background_color": "{{ site.themeColor }}",
   "theme_color": "{{ site.themeColor }}",
   "description": "{{ site.description }}",
-  "icons": {% imageManifest '_assets/logo.svg' %}
+  "icons": {% imageManifest 'src/_assets/logo.svg' %}
 }
