--- a/src/_includes/_base.njk
+++ b/src/_includes/_base.njk
@@ -9,8 +9,8 @@
     <link rel="manifest" href="/manifest.json">
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
-    <link rel="shortcut icon" href="{% imageUrl '_assets/logo.svg', 32, 'png' %}" />
-    <link rel="apple-touch-icon" href="{% imageUrl '_assets/logo.svg', 192, 'png' %}">
+    <link rel="shortcut icon" href="{% imageUrl 'src/_assets/logo.svg', 32, 'png' %}" />
+    <link rel="apple-touch-icon" href="{% imageUrl 'src/_assets/logo.svg', 192, 'png' %}">
     <link rel="feed" href="/blog" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
