Fix scripts include

--- a/src/_includes/_base.njk
+++ b/src/_includes/_base.njk
@@ -49,7 +49,7 @@
     <link rel="pingback" href="https://webmention.io/www.petergoes.nl/xmlrpc" />
 
 
-    <script type="module" src="src/_includes/scripts.js" async></script>
+    <script type="module" src="/src/_includes/scripts.js" async></script>
     <style>{% postcss stylesheets, page.outputPath, process.env.DEVELOPMENT === 'true' %}</style>
   </head>
 
