Reverse mention order

--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -62,8 +62,8 @@
       {% from './components/webmentions/text-responses.njk' import textResponses %}
       {% set webmentionsForUrl = webmentions | getWebmentionsForUrl(site.url + page.url) | removeSyndication(tweetUrl) %}
       {{ interaction(['like-of', 'repost-of'], 'Like', 'Likes and Reposts', webmentionsForUrl) }}
-      {{ textResponses('in-reply-to', 'Reply', 'Replies', webmentionsForUrl) }}
-      {{ textResponses('mention-of', 'Mention', 'Mentions', webmentionsForUrl) }}
+      {{ textResponses('in-reply-to', 'Reply', 'Replies', webmentionsForUrl | reverse) }}
+      {{ textResponses('mention-of', 'Mention', 'Mentions', webmentionsForUrl | reverse) }}
     </footer>
 
     <aside aria-labelledby="this-is-me">
