Add webmention target endpoint for bridgy

--- a/src/_includes/like.njk
+++ b/src/_includes/like.njk
@@ -16,6 +16,7 @@
         {% endif %}
         {% if (silo === 'mastodon') %}
           <a href="https://brid.gy/publish/mastodon" style="display: none;"></a>
+          <a href="https://brid.gy/publish/webmention" class="u-url" style="display: none;"></a>
         {% endif %}
         <small>
           Liked at:
