--- a/content/_files/likes-rss.njk
+++ b/content/_files/likes-rss.njk
@@ -32,7 +32,16 @@
     <id>https://www.petergoes.nl{{ absolutePostUrl }}</id>
     <content type="html">
       {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
-      <a href="{{ post.data.url }}">Link of {{ post.data.title }}</a>
+      {{ '<a href="' }}{{ post.data.url }}{{ '">Like of '}}{{ post.data.url }}{{ '</a>' }}
+      {% if post.data.silo === 'mastodon' or post.data.silo === 'twitter' %}
+        {% if post.data.silo === 'mastodon' %}
+          {{ '<a href="https://brid.gy/publish/mastodon"></a>' }}
+        {% endif %}
+
+        {% if post.data.silo === 'twitter' %}
+          {{ '<a href="https://brid.gy/publish/twitter"></a>' }}
+        {% endif %}
+    {% endif %}
     </content>
   </entry>
   {%- endfor %}
