--- a/src/_includes/overview.njk
+++ b/src/_includes/overview.njk
@@ -26,7 +26,7 @@
 
     <article class="h-entry">
       <h3 class="p-name">
-        <a class="u-url" href="{% if post.data.url %}{{ post.data.url }}{% else %}{{ post.url }}{% endif %}">{{ post.data.title }}</a>
+        <a class="u-url" href="{% if post.data.url %}{{ post.data.url }}{% else %}{{ post.url }}{% endif %}">{{ post.data[titleProperty or 'title'] }}</a>
       </h3>
       {% if showDate %}
         <small>
@@ -49,10 +49,12 @@
     {% endif %}
   {%- endfor -%}
 
+  {% if disableRssLink === false %}
   <hr class="overview-hr" />
 
   <aside>
     <a href="/{{page.fileSlug}}/feed.xml">{{title}} RSS feed</a>
   </aside>
+  {% endif %}
 </section>
 {% endblock %}
