--- a/content/_files/likes-rss.njk
+++ b/content/_files/likes-rss.njk
@@ -31,8 +31,9 @@
     <updated>{{ post.date | dateToRfc3339 }}</updated>
     <id>https://www.petergoes.nl{{ absolutePostUrl }}</id>
     <content type="html">
+      {{ '<div class="e-content">' }}
       {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
-      {{ '<a href="' }}{{ post.data.url }}{{ '">Like of '}}{{ post.data.url }}{{ '</a>' }}
+      {{ '<a class="u-like-of" href="' }}{{ post.data.url }}{{ '">Like of '}}{{ post.data.url }}{{ '</a>' }}
       {% if post.data.silo === 'mastodon' or post.data.silo === 'twitter' %}
         {% if post.data.silo === 'mastodon' %}
           {{ '<a href="https://brid.gy/publish/mastodon"></a>' }}
@@ -41,7 +42,9 @@
         {% if post.data.silo === 'twitter' %}
           {{ '<a href="https://brid.gy/publish/twitter"></a>' }}
         {% endif %}
-    {% endif %}
+        {{ '<a rel="webmention" href="https://www.brid.gy/publish/webmention"></a>' }}
+        {% endif %}
+      {{ '</div>' }}
     </content>
   </entry>
   {%- endfor %}
