fix typo for indieweb

--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -43,7 +43,7 @@
       <h2 id="comments">Comments</h2>
 
       <p>
-        I use <a href="https://indieweb.org/Webmention">WebMentions</a> via the <a href="https://indieweb.org">IndyWeb</a>. Do you have a comment?<br />
+        I use <a href="https://indieweb.org/Webmention">WebMentions</a> via the <a href="https://indieweb.org">IndieWeb</a>. Do you have a comment?<br />
         {% if tweetUrl %}
           Reply on Twitter under <a rel="syndication" class="u-syndication" href="{{ tweetUrl }}">this tweet</a>.
         {% endif %}
