Add comment sections to notes

--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -1,6 +1,7 @@
 ---
   stylesheets:
     - blog.css
+    - components/webmentions/response-form.css
   featuredImageFallback: false
   category: Blog
   og: 
