--- a/src/_includes/note.njk
+++ b/src/_includes/note.njk
@@ -26,6 +26,7 @@
     </header>
     <section class="e-content">
       {{ content | safe }}
+      <a href="https://brid.gy/publish/mastodon" class="display: none;"></a>
     </section>
 
     <footer aria-labelledby="comments">
