readd rel="webmention"

--- a/content/_files/webmentions-to-send-rss.njk
+++ b/content/_files/webmentions-to-send-rss.njk
@@ -46,7 +46,7 @@
         {{ '<a class="u-url" href="' }}{{ post.data.url }}{{ '">Note</a>' }}
         {{ '<a href="https://brid.gy/publish/mastodon"></a>' }}
         {# {{ '<a href="https://brid.gy/publish/twitter"></a>' }} #}
-        {# {{ '<a rel="webmention" href="https://www.brid.gy/publish/webmention"></a>' }} #}
+        {{ '<a rel="webmention" href="https://www.brid.gy/publish/webmention"></a>' }}
       {% endif %}
 
       {% if post.data.silo === 'mastodon' or post.data.silo === 'twitter' %}
