--- a/content/_files/webmentions-to-send-rss.njk
+++ b/content/_files/webmentions-to-send-rss.njk
@@ -45,7 +45,7 @@
       {% if post.data.tags.includes('note') %}
         {{ '<a class="u-url" href="' }}{{ post.data.url }}{{ '">Note</a>' }}
         {{ '<a href="https://brid.gy/publish/mastodon"></a>' }}
-        {# {{ '<a href="https://brid.gy/publish/twitter"></a>' }} #}
+        {{ '<a href="https://brid.gy/publish/twitter"></a>' }}
         {{ '<a rel="webmention" href="https://www.brid.gy/publish/webmention"></a>' }}
       {% endif %}
 
