--- a/src/_includes/note.njk
+++ b/src/_includes/note.njk
@@ -26,7 +26,8 @@
     </header>
     <section class="e-content">
       {{ content | safe }}
-      <a href="https://brid.gy/publish/mastodon" class="display: none;"></a>
+      <a href="https://brid.gy/publish/mastodon" style="display: none;"></a>
+      <a href="https://brid.gy/publish/twitter" style="display: none;"></a>
     </section>
 
     <footer aria-labelledby="comments">
