WIP: Dark mode in progress

--- a/src/_includes/_base.njk
+++ b/src/_includes/_base.njk
@@ -69,6 +69,7 @@
     <div class="debug-vertical-rythm"></div>
 
     <link rel="stylesheet" href="/styles/markdown-decorations.css">
+    <link rel="stylesheet" href="/styles/markdown-decorations-dark.css" media="screen and (prefers-color-scheme: dark)">
 
     {% if process.env.DEVELOPMENT !== "true" %}
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45961555-1"></script>
