--- a/src/_includes/components/footer/footer.njk
+++ b/src/_includes/components/footer/footer.njk
@@ -5,6 +5,7 @@
       <ul>
         <li><a href="/accessibility-statement">Accessibility Statement</a></li>
         <li><a href="/bookmarks">Bookmarks</a></li>
+        <li><a href="/notes">Notes</a></li>
       </ul>
     </nav>
     {% include '../sociallinks/sociallinks.njk' %}
