Add syndication links to notes

--- a/src/_includes/_base.njk
+++ b/src/_includes/_base.njk
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="{% imageUrl 'src/_assets/logo.svg', 32, 'png' %}" />
     <link rel="apple-touch-icon" href="{% imageUrl 'src/_assets/logo.svg', 192, 'png' %}">
     <link rel="feed" href="/blog" />
+    <link rel="feed" href="/notes" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
