--- a/src/_includes/_base.njk
+++ b/src/_includes/_base.njk
@@ -52,8 +52,10 @@
     {% block head %}
     {% endblock %}
 
-    <link rel="webmention" href="https://webmention.io/www.petergoes.nl/webmention" />
-    <link rel="pingback" href="https://webmention.io/www.petergoes.nl/xmlrpc" />
+    {% if page.url !== '/' %}
+      <link rel="webmention" href="https://webmention.io/www.petergoes.nl/webmention" />
+      <link rel="pingback" href="https://webmention.io/www.petergoes.nl/xmlrpc" />
+    {% endif %}
 
 
     <script type="module" src="/src/_includes/scripts.js" async></script>
