Add syndication links to blog overview

--- a/src/_includes/note.njk
+++ b/src/_includes/note.njk
@@ -24,8 +24,8 @@
           {% if tweetUrl %}
             <a rel="syndication" href="{{ tweetUrl }}">This note on Twitter</a>
           {% endif %}
-          {% if mastodonUrl %}
-            <a rel="syndication" href="{{ mastodonUrl }}">This note on toot.cafe</a>
+          {% if tootUrl %}
+            <a rel="syndication" href="{{ tootUrl }}">This note on toot.cafe</a>
           {% endif %}
         </small>
       </aside>
